--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prettier:fix": "prettier --write .",
     "lint:fix": "eslint . --fix",
     "lint": "eslint .",
+    "depcheck": "npx depcheck",
     "type:check": "tsc --noEmit",
     "type:watch": "tsc --noEmit --watch",
     "docker:build": "docker build -t spotify-clone .",
@@ -21,6 +22,7 @@
     "docker:clean": "docker system prune -a"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.4.0",
     "i18next": "^24.0.5",
     "next": "^15.0.4",
     "next-i18next": "^15.4.0",
@@ -28,6 +30,7 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-i18next": "^15.1.3",
+    "react-redux": "^9.1.2",
     "sass": "^1.82.0"
   },
   "devDependencies": {
@@ -58,8 +61,8 @@
   },
   "lint-staged": {
     "*.{js,css,ts,tsx,jsx}": [
-      "prettier --write",
-      "eslint --fix"
+      "prettier --write .",
+      "eslint . --fix"
     ]
   }
 }
