--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "prepare": "husky install",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
-    "lint:fix": "eslint . --fix",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "depcheck": "npx depcheck",
     "type:check": "tsc --noEmit",
     "type:watch": "tsc --noEmit --watch",
@@ -22,8 +22,13 @@
     "docker:clean": "docker system prune -a"
   },
   "dependencies": {
+    "@iconify-icons/material-symbols": "^1.2.58",
+    "@iconify/react": "^5.2.0",
     "@reduxjs/toolkit": "^2.4.0",
+    "@types/classnames": "^2.3.4",
+    "classnames": "^2.5.1",
     "i18next": "^24.0.5",
+    "js-cookie": "^3.0.5",
     "next": "^15.0.4",
     "next-i18next": "^15.4.0",
     "next-pwa": "^5.6.0",
@@ -31,11 +36,20 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-i18next": "^15.1.3",
     "react-redux": "^9.1.2",
-    "sass": "^1.82.0"
+    "sass": "^1.82.0",
+    "workbox-background-sync": "^7.3.0",
+    "workbox-cacheable-response": "^7.3.0",
+    "workbox-core": "^7.3.0",
+    "workbox-expiration": "^7.3.0",
+    "workbox-precaching": "^7.3.0",
+    "workbox-routing": "^7.3.0",
+    "workbox-strategies": "^7.3.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/react": "^18",
