--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,6 +44,9 @@
     "react/function-component-definition": "off",
     "react/jsx-props-no-spreading": "off",
     "react/require-default-props": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
+    "jsx-a11y/no-noninteractive-element-interactions": "off",
     "@typescript-eslint/lines-between-class-members": "off",
     "@typescript-eslint/no-require-imports": "off",
     "@typescript-eslint/no-var-requires": "warn",
