--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "classnames": "^2.5.1",
     "i18next": "^24.0.5",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "next": "^15.0.4",
     "next-i18next": "^15.4.0",
     "next-pwa": "^5.6.0",
@@ -50,6 +51,7 @@
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/jwt-decode": "^3.1.0",
     "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/react": "^18",
