--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "i18next": "^24.0.5",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "nanoid": "^5.1.2",
     "next": "^15.0.4",
     "next-i18next": "^15.4.0",
     "next-pwa": "^5.6.0",
